# MinitronSSM

./: .gitignore  README.md  ReproducingPlan.txt  ServerInformation.txt  minitron_ssm_reproduction_plan.md  notesFmyself.txt  pyproject.toml  requirements.txt  run_baseline.slurm  run_final_eval.slurm  run_final_eval_followups.slurm  run_kd_smoke.slurm  run_kd_train.slurm  run_kd_train_round2.slurm  run_mini_kd.slurm  run_mini_kd_round2.slurm  run_overnight.slurm  run_paper_table4_eval.slurm  run_report_campaign.slurm  runtime_estimates.md  slurm-kd-smoke-1285548.out  slurm-kd-train-1285549.err  submit_final_eval_followups.sh  submit_mini_kd_round2.sh  submit_paper_table4_eval.sh  submit_report_campaign.sh
brokenScripts/: run_final_eval_mini_kd.slurm  run_final_eval_round2.slurm  run_mini_kd_round2.slurm  submit_final_eval_mini_kd.sh  submit_final_eval_round2.sh
configs/: base.yaml  data.yaml  eval.yaml  importance.yaml  kd.yaml  search_space.yaml
scripts/: 01_baseline.py  02_importance.py  03_generate_candidates.py  04_prune_candidates.py  05_eval_candidates.py  06_select_top3.py  07_kd_smoke.py  08_kd_train.py  08b_kd_train_round2.py  09_final_eval.py  09b_final_eval_from_results.py  10_optional_mini_kd.py  10b_mini_kd_round2.py  11_paper_table4_eval.py  12_report_efficiency.py  12_report_suite_eval.py  13_finalize_report_artifacts.py  _common.py
slurm/: run_baseline.slurm  run_final_eval.slurm  run_final_eval_followups.slurm  run_kd_smoke.slurm  run_kd_train.slurm  run_kd_train_round2.slurm  run_mini_kd.slurm  run_mini_kd_round2.slurm  run_overnight.slurm  (+6 more)
(+163 files in other folders)
